--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hi
+<!DOCTYPE html>
+<html>
+  <title>Pixelize</title>
+
+<h2 class="hometitle">Welcome to Pixelize Coding Community Website!</h2>
+
+
+</html>
