--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta content="#6d14c7" data-react-helmet="true" name="theme-color" />
+    <link rel="icon" type="image/png" href="/pico_logo.png">
+    <meta name="description" content="Pixelize - A active discord communtiy for coding enthusiasts!" />
+    <meta name="keywords" content="pixelize, programming, discord, coding, bot" />
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
+    <!--Replace with your tailwind.css once created-->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
   <title>Pixelize</title>
 
 <h2 class="hometitle">Welcome to Pixelize Coding Community Website!</h2>
