--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <!--Replace with your tailwind.css once created-->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" type="text/css">
   <title>Pixelize</title>
 
 <h2 class="hometitle">Welcome to Pixelize Coding Community Website!</h2>
