--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta content="#6d14c7" data-react-helmet="true" name="theme-color" />
     <link rel="icon" type="image/png" href="/pixelizelogo.png">
-    <meta name="description" content="Pixelize - A active discord communtiy for coding enthusiasts!" />
+    <meta name="description" content="Pixelize - An active discord communtiy for coding enthusiasts!" />
     <meta name="keywords" content="pixelize, programming, discord, coding, bot" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <!--Replace with your tailwind.css once created-->
@@ -15,6 +15,6 @@
   <title>Pixelize</title>
 
 <h2 class="hometitle">Welcome to Pixelize Coding Community Website!</h2>
-
+<p class="hometext">It's a bit plain... lol... its not ready yet so be patient!</p>
 
 </html>
