--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta content="#6d14c7" data-react-helmet="true" name="theme-color" />
-    <link rel="icon" type="image/png" href="/pixelizelogo.png">
+    <link rel="icon" type="image/png" href="/pixel-logo-rounded-nobg.png">
     <meta name="description" content="Pixelize - An active discord communtiy for coding enthusiasts!" />
     <meta name="keywords" content="pixelize, programming, discord, coding, bot" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
