--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta content="#6d14c7" data-react-helmet="true" name="theme-color" />
     <link rel="icon" type="image/png" href="/pixel-logo-rounded-nobg.png">
+    <meta property="og:image" content="https://i.imgur.com/imagelink.jpg">
+    <meta property="og:title" content="Website Title" />
+    <meta property="og:description" content="Website Description" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://example.com/" />
     <meta name="description" content="Pixelize - An active discord communtiy for coding enthusiasts!" />
     <meta name="keywords" content="pixelize, programming, discord, coding, bot" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
