--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta content="#6d14c7" data-react-helmet="true" name="theme-color" />
     <link rel="icon" type="image/png" href="/pixel-logo-rounded-nobg.png">
-    <meta property="og:image" content="https://i.imgur.com/imagelink.jpg">
-    <meta property="og:title" content="Website Title" />
-    <meta property="og:description" content="Website Description" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1159507403256119386/1165738918759632946/messagif_2.gif?ex=6547f1f8&is=65357cf8&hm=b50eb2fb5ce2efc87470d19d2ce3b05ace0dcdfdc4b8bbd2c75970a75b028951&=">
+    <meta property="og:title" content="Pixelize Coding Community" />
+    <meta property="og:description" content="Pixelize - An active discord communtiy for coding enthusiasts!" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://example.com/" />
+    <meta property="og:url" content="https://pixelize.dev" />
     <meta name="description" content="Pixelize - An active discord communtiy for coding enthusiasts!" />
     <meta name="keywords" content="pixelize, programming, discord, coding, bot" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
