--- a/index.html
+++ b/index.html
@@ -5,21 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta content="#6d14c7" data-react-helmet="true" name="theme-color" />
-    <link rel="icon" type="image/png" href="/pixel-logo-rounded-nobg.png">
-    <meta property="og:image" content="https://media.discordapp.net/attachments/1159507403256119386/1165738918759632946/messagif_2.gif?ex=6547f1f8&is=65357cf8&hm=b50eb2fb5ce2efc87470d19d2ce3b05ace0dcdfdc4b8bbd2c75970a75b028951&=">
+    <link rel="icon" type="image/png" href="/pixel-logo-rounded-nobg.png" />
+    <meta
+      property="og:image"
+      content="https://media.discordapp.net/attachments/1159507403256119386/1165738918759632946/messagif_2.gif?ex=6547f1f8&is=65357cf8&hm=b50eb2fb5ce2efc87470d19d2ce3b05ace0dcdfdc4b8bbd2c75970a75b028951&="
+    />
     <meta property="og:title" content="Pixelize Coding Community" />
-    <meta property="og:description" content="Pixelize - An active discord communtiy for coding enthusiasts!" />
+    <meta
+      property="og:description"
+      content="Pixelize - An active discord communtiy for coding enthusiasts!"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pixelize.dev" />
-    <meta name="description" content="Pixelize - An active discord communtiy for coding enthusiasts!" />
-    <meta name="keywords" content="pixelize, programming, discord, coding, bot" />
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
-    <!--Replace with your tailwind.css once created-->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+    <meta
+      name="description"
+      content="Pixelize - An active discord communtiy for coding enthusiasts!"
+    />
+    <meta
+      name="keywords"
+      content="pixelize, programming, discord, coding, bot"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700"
+      rel="stylesheet"
+    />
     <link href="style.css" rel="stylesheet" type="text/css" />
-  <title>Pixelize</title>
+    <title>Pixelize</title>
+  </head>
 
-<h2 class="hometitle">Welcome to Pixelize Coding Community Website!</h2>
-<p class="hometext">It's a bit plain... lol... its not ready yet so be patient!</p>
+  <body>
+    <header>
+      <nav class="bg-purple-600 p-4">
+        <div class="container mx-auto flex justify-between items-center">
+          <h1 class="text-2xl font-bold text-white">Pixelize Coding Community</h1>
+          <ul class="space-x-4">
+            <li class="inline-block">
+              <a href="#" class="text-white hover:underline">Home</a>
+            </li>
+            <li class="inline-block">
+              <a href="#" class="text-white hover:underline">About</a>
+            </li>
+            <li class="inline-block">
+              <a href="#" class="text-white hover:underline">Services</a>
+            </li>
+            <li class="inline-block">
+              <a href="#" class="text-white hover:underline">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
+    <section class="bg-purple-900 py-16">
+      <div class="container mx-auto text-white text-center">
+        <h2 class="text-4xl font-extrabold mb-4">Welcome to Pixelize Coding Community Website!</h2>
+        <p class="text-lg">It's a bit plain... lol... it's not ready yet so be patient!</p>
+      </div>
+    </section>
+  </body>
 </html>
