--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="/pixel-logo-rounded-nobg.png" />
     <meta
       property="og:image"
-      content="https://media.discordapp.net/attachments/1159507403256119386/1165738918759632946/messagif_2.gif?ex=6547f1f8&is=65357cf8&hm=b50eb2fb5ce2efc87470d19d2ce3b05ace0dcdfdc4b8bbd2c75970a75b028951&="
+      content="/pixel-logo-rounded-nobg.png"
     />
     <meta property="og:title" content="Pixelize Coding Community" />
     <meta
