--- a/404.html
+++ b/404.html
@@ -25,14 +25,17 @@
     <nav class="bg-purple-600 p-4">
       <div class="container mx-auto flex justify-between items-center">
         <a href="index.html" id="logo">
-          <img src="pixelize logo.JPG" alt="Logo" height="50" width="50">
+          <img src="pixelize logo.JPG" alt="Logo" height="70" width="70">
         </a>
         <ul class="space-x-4">
           <li class="inline-block">
-            <a href="#" class="text-white hover:underline">Home</a>
+            <a href="/" class="text-white hover:underline">Home</a>
           </li>
           <li class="inline-block">
-            <a href="/discord.html" class="text-white hover:underline">Discord</a>
+            <a onclick="openInNewTab('discord.html')" class="text-white hover:underline">Discord</a>
+          </li>
+          <li class="inline-block">
+            <a onclick="openInNewTab('github.html')" class="text-white hover:underline">Github</a>
           </li>
         </ul>
       </div>
