--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta content="#6d14c7" data-react-helmet="true" name="theme-color" />
-  <link rel="icon" type="image/png" href="/pixelize logo.JPG" />
-  <meta property="og:image" content="/pixel-logo-rounded-nobg.png" />
+  <link rel="icon" type="image/png" href="/pixelize logo (1).JPG" />
+  <meta property="og:image" content="/pixelize logo (1).png" />
   <meta property="og:title" content="Pixelize Coding Community" />
   <meta property="og:description" content="Pixelize - An active discord community for coding enthusiasts!" />
   <meta property="og:type" content="website" />
