--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     <nav class="bg-purple-600 p-4">
       <div class="container mx-auto flex justify-between items-center">
         <a href="index.html" id="logo">
-          <img src="pixelize logo.JPG" alt="Logo" height="70" width="70">
+          <img src="pixelize logo (1).JPG" alt="Logo" height="70" width="70">
         </a>
         <ul class="space-x-4">
           <li class="inline-block">
