--- a/index.html
+++ b/index.html
@@ -58,15 +58,14 @@
   </div>
   </div>
   <div id="online">
-    <h2>Members: 590+</h2>
+    <h2>Members: 630+</h2>
     <h3>Founders</h3>
-    <p class="founders">devcheese<br>apulpha</p>
+    <p class="founders">devcheese</p>
     <h3>Admins</h3>
-    <p class="admins">roc.py</p>
-    <h3>Staff</h3>
-    <p class="staff">axxys_<br>qeast</p>
-    <h3>Moderators</h3>
-    <p class="moderators">_0bits<br>ancient.web<br>noobflyne<br>cool_guy1091<br>iceymeltz<br>.maxringo<br>lazyness_<br>Wegph#3702</p>
+    <p class="admins">
+      apulhpa<br>
+      axxys_<br>
+      roc.py</p>
 
     <br><br>
 
